# cpp

./: .gitignore
Test_oop/: CMakeLists.txt  calc.cpp  calc.h  color_bitfields.cc  main  main.cpp
assignment/AS1/: CMakeLists.txt  main.cpp
assignment/AS2/: CMakeLists.txt  main.cpp
cmake-tutorial/Step1/: CMakeLists.txt  tutorial.cxx
cmake-tutorial/Step2/: CMakeLists.txt  tutorial.cxx
cmake-tutorial/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
concurrency_stuffs/: CMakeLists.txt  asyncthing.cpp  main.cpp  numberthread.cpp  ownthread.cpp  readthread.cpp
concurrency_stuffs/stop_watch/: CmakeLists.txt  stopwatch.cpp
concurrency_stuffs/stop_watch/include/: stopwatch.h
copy_stuff/: CMakeLists.txt  main.cpp
datastruct0/: CMakeLists.txt  btreething.cpp  hashthing.cpp  listthing.cpp  mapthing.cpp  sequentialthing.cpp
design_pattern/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp
design_pattern/include/: observer.h  observer_implement.h  proxy.h  singleton.h
design_pattern/src/behavioral/: observer_implement.cpp
design_pattern/src/creational/: singleton.cpp
design_pattern/src/structural/: proxy.cpp
ipc_stuff/: CMakeLists.txt
ipc_stuff/src/dbus_stuff/: add_server.cpp  media_player_service.cpp  simple_connect.cpp  simple_signal.cpp  simple_signal_gdbus.cpp
ipc_stuff/src/fork_stuff/: change_of_ppid.cpp  main.cpp  wait_pid.cpp
ipc_stuff/src/ipc_stuff/: mqueue_server.cpp  shared_mem_server.cpp
ipc_stuff/src/pipe_stuff/: pipe_basic.cpp  pipe_dual.cpp  pipe_named_server.cpp  pipe_processes.cpp
ipc_stuff/src/socket_stuff/: socket_server.cpp
ipc_stuff2/: CMakeLists.txt
ipc_stuff2/include/: t_color.h
ipc_stuff2/python/: signal_catcher.py
ipc_stuff2/src/dbus_stuff/: add_client.cpp  simple_signal_catcher.cpp
ipc_stuff2/src/ipc_stuff/: mqueue_client.cpp  mqueue_client_sig.cpp  shared_mem_client.cpp
ipc_stuff2/src/pipe_stuff/: main.cpp  pipe_named_client.cpp
ipc_stuff2/src/socket_stuff/: hostinfo.cpp  socket_client.cpp
keyword_stuff/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
lambda_stuff/: CMakeLists.txt  main.c++
learn-cmake/: CMakeLists.txt  main.cpp
learn-cmake/folder_a/: CMakeLists.txt  saiyan.cpp  saiyan.h
lib_study/lib/include/: my_math_lib.h
lib_study/my_dlib/: CMakeLists.txt  my_dlib.cpp
lib_study/my_dlib/include/: my_dlib.h
lib_study/my_math_lib/: CMakeLists.txt  my_math_lib.cpp
lib_study/my_math_lib/include/: my_math_lib.h
lib_study/test/: CMakeLists.txt  main.cpp
lib_study/test_load_runtime/: CMakeLists.txt  class_lib.cpp  func_lib.cpp
lib_stuff/: CMakeLists.txt  main.cpp
lib_stuff/my_math_lib/: CMakeLists.txt  my_math_lib.cpp
move_stuff/: CMakeLists.txt  main.cpp
my_lib/my_math_lib/: CMakeLists.txt  my_math_lib.cpp
overloading/: CMakeLists.txt  a-main.cpp.005t.original  animal.h  inhe.h  main.cpp
polymorph/: CMakeLists.txt  main.cpp
posix_test/: CMakeLists.txt  example.txt  main.cpp  main2.cpp  posixtest2  test.bash
project_t/: CMakeLists.txt  a-main.cpp.005t.original  a-saiyan.cpp.005t.original  main.cpp  namek.cpp  namek.h  saiyan.cpp  saiyan.h
project_v2/: CMakeLists.txt
project_v2/include/: communication.h  ipc_process.h  server_queue.h
project_v2/main/: client_main.cpp  server_main.cpp  service_main.cpp
project_v2/src/: communication.cpp  ipc_process.cpp  server_queue.cpp
read_write/: receiver  receiver.cpp  sender  sender.cpp
smart_pointer0/: CMakeLists.txt  main.cpp  my_share.h
smart_pointer2/: CMakeLists.txt  main.cpp  somefile.txt
template_stuff/: CMakeLists.txt  main.cpp  my_template.h
template_stuff2/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/include/: main.h
test2/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  server_main.cpp
test2/MQIPC/: CMakeLists.txt
test2/MQIPC/include/: ipc_app.h  ipc_server.h  message.h  queue_handler.h  t_color.h
test2/MQIPC/src/: ipc_app.cpp  ipc_server.cpp  message.cpp  queue_handler.cpp  t_color.cpp  test2.code-workspace
test2_clients/: CMakeLists.txt  CMakePresets.json  client_main.cpp
test2_service/: CMakeLists.txt  service_main.cpp
test_numcpp/: CMakeLists.txt  main.cpp
test_stuff/: CMakeLists.txt  CMakePresets.json  demo.cpp  demo_inte.cpp  main.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
test_stuff/include/: carsys.h
