cmake_minimum_required(VERSION 3.10.0)
project(coresmart VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_BUILD_TYPE Debug)
add_executable(${PROJECT_NAME})

# set(MAIN main.cpp)
# set(MAIN main2.cpp)
# set(MAIN main3.cpp)
# set(MAIN main4.cpp)
set(MAIN main5.cpp)
target_sources(${PROJECT_NAME} PRIVATE ${MAIN})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -rdynamic")
target_compile_options(${PROJECT_NAME} PUBLIC -g -rdynamic -Wall -fno-elide-constructors)