cmake_minimum_required(VERSION 3.19)
project(Test VERSION 1)
add_executable(Test)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED TRUE)
target_sources(${PROJECT_NAME} PRIVATE main.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
# SET( CMAKE_CXX_FLAGS "-Wall")
target_compile_options(${PROJECT_NAME} PRIVATE -g -Wall -Werror)
target_compile_options(${PROJECT_NAME} PRIVATE -fno-elide-constructors)